# usb-spi

./: README.md
atsamd-usbd-spi/: Cargo.toml  README.md
atsamd-usbd-spi/src/: lib.rs
atsamd-usbd-spi/src/spi_device/: mod.rs
driver-kernel/: .gitignore  Makefile  README.md  usb-spi.c  usb_spi.c
protocol/: Cargo.toml  build.rs  cbindgen.toml  usb-spi-protocol.h
protocol/src/: lib.rs
test-driver/: Makefile  test_driver.c
