[package]
name = "atsamd-usbd-spi"
version = "0.1.0"
authors = ["Ian Rees <code@ianrees.nz>"]
keywords = ["no-std", "arm", "cortex-m", "atsamd", "usb", "embedded-hal"]
edition = "2018"

[dependencies]
# Using bbqueue because it gives a low-cost method to attempt a USB write,
# without removing data from the structure, where heapless::spsc would seem to
# require an intermediate buffer.
bbqueue = {version = "0.4.12", features = ["thumbv6"]}

cortex-m = "~0.6"

# TODO Remove defmt before publishing?
defmt = "0.2.0"
defmt-rtt = "0.2.0"

usb-device = "0.2.7"

[dependencies.atsamd-hal]
# TODO stop using this
path = "/home/irees/Projects/20201112 - atsamd-rs/hal"

# TODO specify as a minimum version of atsamd-hal once the UARTv2 PR is merged
features = ["usb"]

[features]
default = [
    "defmt-default",
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []