[package]
name = "usb-spi-protocol"
version = "0.1.0"
authors = ["Ian Rees <code@ianrees.nz>"]
edition = "2018"
description = "Protocol used for USB-SPI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumn = "0.1"

[build-dependencies]
# Used by build.rs to create the C header file
cbindgen = "0.17.0"
