[package]
name = "usb-spi-protocol"
version = "0.1.0"
authors = ["Ian Rees <code@ianrees.nz>"]
edition = "2018"
description = "Protocol used for USB-SPI"

[dependencies]
bitflags = "1.2.1"
byteorder = {version = "1.3.4", default-features = false}
enumn = "0.1"

[build-dependencies]
# Used by build.rs to create the C header file
cbindgen = "0.19.0"
